StatsDirectUI/TextProcessing/ActiveRtfParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g 2012-05-08 08:59:36

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;

namespace  StatsDirect.TextProcessing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
public partial class ActiveRtfParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "B", "BUMF", "C", "COLON", "D", "E", "F", "G", "H", "I", "IDENTIFIER", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "SLASH", "SLASHBF", "SLASHBS", "SLASHSTAR", "T", "U", "V", "W", "WS", "X", "Y", "Z"
	};
	public const int EOF=-1;
	public const int A=4;
	public const int B=5;
	public const int BUMF=6;
	public const int C=7;
	public const int COLON=8;
	public const int D=9;
	public const int E=10;
	public const int F=11;
	public const int G=12;
	public const int H=13;
	public const int I=14;
	public const int IDENTIFIER=15;
	public const int J=16;
	public const int K=17;
	public const int L=18;
	public const int M=19;
	public const int N=20;
	public const int O=21;
	public const int P=22;
	public const int Q=23;
	public const int R=24;
	public const int S=25;
	public const int SLASH=26;
	public const int SLASHBF=27;
	public const int SLASHBS=28;
	public const int SLASHSTAR=29;
	public const int T=30;
	public const int U=31;
	public const int V=32;
	public const int W=33;
	public const int WS=34;
	public const int X=35;
	public const int Y=36;
	public const int Z=37;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public ActiveRtfParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public ActiveRtfParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return ActiveRtfParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g"; } }


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_start() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_start() {}
	// $ANTLR start "start"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:6:8: public start returns [string code] : activeRtf EOF ;
	[GrammarRule("start")]
	public string start()
	{
		EnterRule_start();
		EnterRule("start", 1);
		TraceIn("start", 1);
	    string code = default(string);


	    string activeRtf1 = default(string);

		try { DebugEnterRule(GrammarFileName, "start");
		DebugLocation(6, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:7:2: ( activeRtf EOF )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:7:4: activeRtf EOF
			{
			DebugLocation(7, 4);
			PushFollow(Follow._activeRtf_in_start32);
			activeRtf1=activeRtf();
			PopFollow();

			DebugLocation(7, 14);
			Match(input,EOF,Follow._EOF_in_start34); 
			DebugLocation(7, 18);
			 code = activeRtf1; 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("start", 1);
			LeaveRule("start", 1);
			LeaveRule_start();
	    }
	 	DebugLocation(8, 1);
		} finally { DebugExitRule(GrammarFileName, "start"); }
		return code;

	}
	// $ANTLR end "start"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_activeRtf() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_activeRtf() {}
	// $ANTLR start "activeRtf"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:10:1: activeRtf returns [string code] : first= piece (rest= piece )* ;
	[GrammarRule("activeRtf")]
	private string activeRtf()
	{
		EnterRule_activeRtf();
		EnterRule("activeRtf", 2);
		TraceIn("activeRtf", 2);
	    string code = default(string);


	    string first = default(string);
	    string rest = default(string);

		try { DebugEnterRule(GrammarFileName, "activeRtf");
		DebugLocation(10, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:11:2: (first= piece (rest= piece )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:11:4: first= piece (rest= piece )*
			{
			DebugLocation(11, 9);
			PushFollow(Follow._piece_in_activeRtf53);
			first=piece();
			PopFollow();

			DebugLocation(11, 16);
			 code = first; 
			DebugLocation(12, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:12:3: (rest= piece )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_1 = input.LA(1);

				if ((LA1_1==BUMF||LA1_1==COLON||LA1_1==IDENTIFIER||LA1_1==SLASH||(LA1_1>=SLASHBS && LA1_1<=SLASHSTAR)||LA1_1==WS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:12:4: rest= piece
					{
					DebugLocation(12, 8);
					PushFollow(Follow._piece_in_activeRtf62);
					rest=piece();
					PopFollow();

					DebugLocation(12, 15);
					 code += rest; 

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("activeRtf", 2);
			LeaveRule("activeRtf", 2);
			LeaveRule_activeRtf();
	    }
	 	DebugLocation(13, 1);
		} finally { DebugExitRule(GrammarFileName, "activeRtf"); }
		return code;

	}
	// $ANTLR end "activeRtf"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_piece() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_piece() {}
	// $ANTLR start "piece"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:15:1: piece returns [string code] : ( substitution | block | bumf );
	[GrammarRule("piece")]
	private string piece()
	{
		EnterRule_piece();
		EnterRule("piece", 3);
		TraceIn("piece", 3);
	    string code = default(string);


	    string substitution2 = default(string);
	    string block3 = default(string);
	    string bumf4 = default(string);

		try { DebugEnterRule(GrammarFileName, "piece");
		DebugLocation(15, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:16:2: ( substitution | block | bumf )
			int alt2=3;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			switch (input.LA(1))
			{
			case SLASHSTAR:
				{
				alt2 = 1;
				}
				break;
			case SLASHBS:
				{
				alt2 = 2;
				}
				break;
			case BUMF:
			case COLON:
			case IDENTIFIER:
			case SLASH:
			case WS:
				{
				alt2 = 3;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:16:4: substitution
				{
				DebugLocation(16, 4);
				PushFollow(Follow._substitution_in_piece82);
				substitution2=substitution();
				PopFollow();

				DebugLocation(16, 17);
				 code = substitution2; 

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:17:4: block
				{
				DebugLocation(17, 4);
				PushFollow(Follow._block_in_piece89);
				block3=block();
				PopFollow();

				DebugLocation(17, 10);
				 code = block3; 

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:18:4: bumf
				{
				DebugLocation(18, 4);
				PushFollow(Follow._bumf_in_piece96);
				bumf4=bumf();
				PopFollow();

				DebugLocation(18, 9);
				 code = bumf4; 

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("piece", 3);
			LeaveRule("piece", 3);
			LeaveRule_piece();
	    }
	 	DebugLocation(19, 1);
		} finally { DebugExitRule(GrammarFileName, "piece"); }
		return code;

	}
	// $ANTLR end "piece"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_substitution() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_substitution() {}
	// $ANTLR start "substitution"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:21:1: substitution returns [string code] : SLASHSTAR ( WS )? VARIABLENAME= IDENTIFIER ( ( WS )? COLON ( WS )? VARIABLEFORMAT= IDENTIFIER )? ( WS )? SLASH ;
	[GrammarRule("substitution")]
	private string substitution()
	{
		EnterRule_substitution();
		EnterRule("substitution", 4);
		TraceIn("substitution", 4);
	    string code = default(string);


	    IToken VARIABLENAME = default(IToken);
	    IToken VARIABLEFORMAT = default(IToken);

		try { DebugEnterRule(GrammarFileName, "substitution");
		DebugLocation(21, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:2: ( SLASHSTAR ( WS )? VARIABLENAME= IDENTIFIER ( ( WS )? COLON ( WS )? VARIABLEFORMAT= IDENTIFIER )? ( WS )? SLASH )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:4: SLASHSTAR ( WS )? VARIABLENAME= IDENTIFIER ( ( WS )? COLON ( WS )? VARIABLEFORMAT= IDENTIFIER )? ( WS )? SLASH
			{
			DebugLocation(22, 4);
			Match(input,SLASHSTAR,Follow._SLASHSTAR_in_substitution113); 
			DebugLocation(22, 14);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:14: ( WS )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, decisionCanBacktrack[3]);
			int LA3_1 = input.LA(1);

			if ((LA3_1==WS))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:14: WS
				{
				DebugLocation(22, 14);
				Match(input,WS,Follow._WS_in_substitution115); 

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(22, 30);
			VARIABLENAME=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_substitution120); 
			DebugLocation(22, 42);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:42: ( ( WS )? COLON ( WS )? VARIABLEFORMAT= IDENTIFIER )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_1 = input.LA(1);

			if ((LA6_1==WS))
			{
				int LA6_2 = input.LA(2);

				if ((LA6_2==COLON))
				{
					alt6 = 1;
				}
			}
			else if ((LA6_1==COLON))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:44: ( WS )? COLON ( WS )? VARIABLEFORMAT= IDENTIFIER
				{
				DebugLocation(22, 44);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:44: ( WS )?
				int alt4=2;
				try { DebugEnterSubRule(4);
				try { DebugEnterDecision(4, decisionCanBacktrack[4]);
				int LA4_1 = input.LA(1);

				if ((LA4_1==WS))
				{
					alt4 = 1;
				}
				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:44: WS
					{
					DebugLocation(22, 44);
					Match(input,WS,Follow._WS_in_substitution124); 

					}
					break;

				}
				} finally { DebugExitSubRule(4); }

				DebugLocation(22, 48);
				Match(input,COLON,Follow._COLON_in_substitution127); 
				DebugLocation(22, 54);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:54: ( WS )?
				int alt5=2;
				try { DebugEnterSubRule(5);
				try { DebugEnterDecision(5, decisionCanBacktrack[5]);
				int LA5_1 = input.LA(1);

				if ((LA5_1==WS))
				{
					alt5 = 1;
				}
				} finally { DebugExitDecision(5); }
				switch (alt5)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:54: WS
					{
					DebugLocation(22, 54);
					Match(input,WS,Follow._WS_in_substitution129); 

					}
					break;

				}
				} finally { DebugExitSubRule(5); }

				DebugLocation(22, 72);
				VARIABLEFORMAT=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_substitution134); 

				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(22, 87);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:87: ( WS )?
			int alt7=2;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, decisionCanBacktrack[7]);
			int LA7_1 = input.LA(1);

			if ((LA7_1==WS))
			{
				alt7 = 1;
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:22:87: WS
				{
				DebugLocation(22, 87);
				Match(input,WS,Follow._WS_in_substitution139); 

				}
				break;

			}
			} finally { DebugExitSubRule(7); }

			DebugLocation(22, 91);
			Match(input,SLASH,Follow._SLASH_in_substitution142); 
			DebugLocation(22, 97);
			 code = EncodeSubstitution((VARIABLENAME!=null?VARIABLENAME.Text:null), (VARIABLEFORMAT!=null?VARIABLEFORMAT.Text:null)); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("substitution", 4);
			LeaveRule("substitution", 4);
			LeaveRule_substitution();
	    }
	 	DebugLocation(23, 1);
		} finally { DebugExitRule(GrammarFileName, "substitution"); }
		return code;

	}
	// $ANTLR end "substitution"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_block() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_block() {}
	// $ANTLR start "block"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:25:1: block returns [string code] : blockStart activeRtf blockFinish ;
	[GrammarRule("block")]
	private string block()
	{
		EnterRule_block();
		EnterRule("block", 5);
		TraceIn("block", 5);
	    string code = default(string);


	    string blockStart5 = default(string);
	    string activeRtf6 = default(string);

		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(25, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:26:2: ( blockStart activeRtf blockFinish )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:26:4: blockStart activeRtf blockFinish
			{
			DebugLocation(26, 4);
			PushFollow(Follow._blockStart_in_block159);
			blockStart5=blockStart();
			PopFollow();

			DebugLocation(26, 15);
			PushFollow(Follow._activeRtf_in_block161);
			activeRtf6=activeRtf();
			PopFollow();

			DebugLocation(26, 25);
			PushFollow(Follow._blockFinish_in_block163);
			blockFinish();
			PopFollow();

			DebugLocation(26, 37);
			 code = EncodeBlock(blockStart5, activeRtf6); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("block", 5);
			LeaveRule("block", 5);
			LeaveRule_block();
	    }
	 	DebugLocation(27, 1);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return code;

	}
	// $ANTLR end "block"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bumf() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bumf() {}
	// $ANTLR start "bumf"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:29:1: bumf returns [string code] : bumfPieces ;
	[GrammarRule("bumf")]
	private string bumf()
	{
		EnterRule_bumf();
		EnterRule("bumf", 6);
		TraceIn("bumf", 6);
	    string code = default(string);


	    string bumfPieces7 = default(string);

		try { DebugEnterRule(GrammarFileName, "bumf");
		DebugLocation(29, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:30:2: ( bumfPieces )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:30:4: bumfPieces
			{
			DebugLocation(30, 4);
			PushFollow(Follow._bumfPieces_in_bumf180);
			bumfPieces7=bumfPieces();
			PopFollow();

			DebugLocation(30, 15);
			 code = EncodeBumf(bumfPieces7); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("bumf", 6);
			LeaveRule("bumf", 6);
			LeaveRule_bumf();
	    }
	 	DebugLocation(31, 1);
		} finally { DebugExitRule(GrammarFileName, "bumf"); }
		return code;

	}
	// $ANTLR end "bumf"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bumfPieces() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bumfPieces() {}
	// $ANTLR start "bumfPieces"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:33:1: bumfPieces returns [string text] : first= bumfPiece (rest= bumfPiece )* ;
	[GrammarRule("bumfPieces")]
	private string bumfPieces()
	{
		EnterRule_bumfPieces();
		EnterRule("bumfPieces", 7);
		TraceIn("bumfPieces", 7);
	    string text = default(string);


	    string first = default(string);
	    string rest = default(string);

		try { DebugEnterRule(GrammarFileName, "bumfPieces");
		DebugLocation(33, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:34:2: (first= bumfPiece (rest= bumfPiece )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:34:4: first= bumfPiece (rest= bumfPiece )*
			{
			DebugLocation(34, 9);
			PushFollow(Follow._bumfPiece_in_bumfPieces199);
			first=bumfPiece();
			PopFollow();

			DebugLocation(34, 20);
			 text = first; 
			DebugLocation(35, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:35:3: (rest= bumfPiece )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, decisionCanBacktrack[8]);
				int LA8_1 = input.LA(1);

				if ((LA8_1==BUMF||LA8_1==COLON||LA8_1==IDENTIFIER||LA8_1==SLASH||LA8_1==WS))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:35:4: rest= bumfPiece
					{
					DebugLocation(35, 8);
					PushFollow(Follow._bumfPiece_in_bumfPieces208);
					rest=bumfPiece();
					PopFollow();

					DebugLocation(35, 19);
					 text += rest; 

					}
					break;

				default:
					goto loop8;
				}
			}

			loop8:
				;

			} finally { DebugExitSubRule(8); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("bumfPieces", 7);
			LeaveRule("bumfPieces", 7);
			LeaveRule_bumfPieces();
	    }
	 	DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "bumfPieces"); }
		return text;

	}
	// $ANTLR end "bumfPieces"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bumfPiece() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bumfPiece() {}
	// $ANTLR start "bumfPiece"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:38:1: bumfPiece returns [string text] : ( BUMF | COLON | IDENTIFIER | SLASH | WS );
	[GrammarRule("bumfPiece")]
	private string bumfPiece()
	{
		EnterRule_bumfPiece();
		EnterRule("bumfPiece", 8);
		TraceIn("bumfPiece", 8);
	    string text = default(string);


		try { DebugEnterRule(GrammarFileName, "bumfPiece");
		DebugLocation(38, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:39:2: ( BUMF | COLON | IDENTIFIER | SLASH | WS )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:
			{
			DebugLocation(39, 2);
			if (input.LA(1)==BUMF||input.LA(1)==COLON||input.LA(1)==IDENTIFIER||input.LA(1)==SLASH||input.LA(1)==WS)
			{
				input.Consume();
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("bumfPiece", 8);
			LeaveRule("bumfPiece", 8);
			LeaveRule_bumfPiece();
	    }
	 	DebugLocation(44, 1);
		} finally { DebugExitRule(GrammarFileName, "bumfPiece"); }
		return text;

	}
	// $ANTLR end "bumfPiece"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_blockStart() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_blockStart() {}
	// $ANTLR start "blockStart"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:46:1: blockStart returns [string name] : SLASHBS ( WS )? IDENTIFIER ( WS )? SLASH ;
	[GrammarRule("blockStart")]
	private string blockStart()
	{
		EnterRule_blockStart();
		EnterRule("blockStart", 9);
		TraceIn("blockStart", 9);
	    string name = default(string);


	    IToken IDENTIFIER8 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "blockStart");
		DebugLocation(46, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:2: ( SLASHBS ( WS )? IDENTIFIER ( WS )? SLASH )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:4: SLASHBS ( WS )? IDENTIFIER ( WS )? SLASH
			{
			DebugLocation(47, 4);
			Match(input,SLASHBS,Follow._SLASHBS_in_blockStart263); 
			DebugLocation(47, 12);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:12: ( WS )?
			int alt9=2;
			try { DebugEnterSubRule(9);
			try { DebugEnterDecision(9, decisionCanBacktrack[9]);
			int LA9_1 = input.LA(1);

			if ((LA9_1==WS))
			{
				alt9 = 1;
			}
			} finally { DebugExitDecision(9); }
			switch (alt9)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:12: WS
				{
				DebugLocation(47, 12);
				Match(input,WS,Follow._WS_in_blockStart265); 

				}
				break;

			}
			} finally { DebugExitSubRule(9); }

			DebugLocation(47, 16);
			IDENTIFIER8=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_blockStart268); 
			DebugLocation(47, 27);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:27: ( WS )?
			int alt10=2;
			try { DebugEnterSubRule(10);
			try { DebugEnterDecision(10, decisionCanBacktrack[10]);
			int LA10_1 = input.LA(1);

			if ((LA10_1==WS))
			{
				alt10 = 1;
			}
			} finally { DebugExitDecision(10); }
			switch (alt10)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\TextProcessing\\ActiveRtf.g:47:27: WS
				{
				DebugLocation(47, 27);
				Match(input,WS,Follow._WS_in_blockStart270); 

				}
				break;

			}
			} finally { DebugExitSubRule(10); }

			DebugLocation(47, 31);
